Fixed pkl issue

--- a/Volleyball_KNN.ipynb
+++ b/Volleyball_KNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOV/gKgabaA8NhsWkpi8tA1",
+      "authorship_tag": "ABX9TyPwTgGVMJTjgM8HGtvI4C5a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -499,16 +499,42 @@
         "def prep_dataset_my_columns(df):\n",
         "  columns_to_drop = [\n",
         "    'OPP_BR_number','OPP_BR_ID','OPP_BR_Height','OPP_BR_BS','OPP_BR_BA','OPP_BR_BT',\n",
-        "    'OPP_BR_BE','OPP_BR_SA','OPP_BR_SE','OPP_BM_number','OPP_BM_ID','OPP_BM_Height',\n",
+        "    'OPP_BR_BE','OPP_BM_number','OPP_BM_ID','OPP_BM_Height',\n",
         "    'OPP_BM_BS','OPP_BM_BA','OPP_BM_BT','OPP_BM_BE','OPP_BM_SA','OPP_BM_SE','OPP_BL_number','OPP_BL_ID',\n",
         "    'OPP_BL_Height','OPP_BL_BS','OPP_BL_BA','OPP_BL_BT','OPP_BL_BE','OPP_BL_SA','OPP_BL_SE'\n",
         "  ]\n",
-        "  return prep_dataset2(df, columns_to_drop)"
+        "  return prep_dataset2(df, columns_to_drop)\n",
+        "\n",
+        "import pickle as pkl\n",
+        "def KNNdataloader(df):\n",
+        "    columns_to_drop = [\n",
+        "        'OPP_BR_number','OPP_BR_ID','OPP_BR_Height','OPP_BR_BS','OPP_BR_BA','OPP_BR_BT',\n",
+        "        'OPP_BR_BE','OPP_BM_number','OPP_BM_ID','OPP_BM_Height',\n",
+        "        'OPP_BM_BS','OPP_BM_BA','OPP_BM_BT','OPP_BM_BE','OPP_BM_SA','OPP_BM_SE','OPP_BL_number','OPP_BL_ID',\n",
+        "        'OPP_BL_Height','OPP_BL_BS','OPP_BL_BA','OPP_BL_BT','OPP_BL_BE','OPP_BL_SA','OPP_BL_SE',\n",
+        "    ]\n",
+        "\n",
+        "    data = df.drop(columns_to_drop, axis=1)\n",
+        "    enc = pkl.load(open(\"KNN_one_hot_encoder.pkl\", \"rb\"))\n",
+        "    enc.handle_unknown = 'ignore'\n",
+        "    categorical_cols = [\"SET_REGION\", \"BYU_FL_Position\", \"BYU_FM_Position\", \"BYU_FR_Position\", \"BYU_BL_Position\",\n",
+        "              \"BYU_BM_Position\", \"BYU_BR_Position\", \"OPP_FL_Position\", \"OPP_FM_Position\", \"OPP_FR_Position\",\n",
+        "              \"OPP_BL_Position\", \"OPP_BM_Position\", \"OPP_BR_Position\"\n",
+        "                        ]\n",
+        "\n",
+        "    # apply the encoder into a dataframe\n",
+        "    one_hot = enc.transform(data[categorical_cols]).toarray()\n",
+        "    onehot_df = pd.DataFrame(one_hot, columns=enc.get_feature_names_out(categorical_cols))\n",
+        "    numerical = data.drop(columns=categorical_cols, axis=1)\n",
+        "    onehot_df.index = numerical.index\n",
+        "    data = pd.concat([numerical, onehot_df], axis=1)\n",
+        "    data.head()\n",
+        "    return data"
       ],
       "metadata": {
         "id": "wO1tZaZRVt9b"
       },
-      "execution_count": 47,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -516,7 +542,7 @@
       "source": [
         "df = pd.read_csv('data.csv')\n",
         "# df.head()\n",
-        "prep_dataset_my_columns(df)"
+        "KNNdataloader(df)"
       ],
       "metadata": {
         "colab": {
@@ -524,9 +550,9 @@
           "height": 443
         },
         "id": "XW38TZ-OtxLf",
-        "outputId": "eccd716b-175e-4bba-c05b-e40d4bb33ce3"
+        "outputId": "455a396a-44be-40ea-e926-e35f12e365aa"
       },
-      "execution_count": 48,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -610,11 +636,11 @@
               "276                 0.0                  0.0                0.0  \n",
               "277                 1.0                  0.0                0.0  \n",
               "\n",
-              "[278 rows x 204 columns]"
+              "[278 rows x 206 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dd35b6c0-8b2d-4559-9192-05f44b1fb894\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-581b57f7-d51e-4a3f-8980-1c363a6e9861\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -923,12 +949,12 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>278 rows × 204 columns</p>\n",
+              "<p>278 rows × 206 columns</p>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dd35b6c0-8b2d-4559-9192-05f44b1fb894')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-581b57f7-d51e-4a3f-8980-1c363a6e9861')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -980,12 +1006,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-dd35b6c0-8b2d-4559-9192-05f44b1fb894 button.colab-df-convert');\n",
+              "        document.querySelector('#df-581b57f7-d51e-4a3f-8980-1c363a6e9861 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-dd35b6c0-8b2d-4559-9192-05f44b1fb894');\n",
+              "        const element = document.querySelector('#df-581b57f7-d51e-4a3f-8980-1c363a6e9861');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1005,8 +1031,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c0779c90-a2c8-4a92-848f-096a801f4a21\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c0779c90-a2c8-4a92-848f-096a801f4a21')\"\n",
+              "<div id=\"df-11b8a25f-7b10-49ce-aeff-fae2db91c4cf\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-11b8a25f-7b10-49ce-aeff-fae2db91c4cf')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1125,7 +1151,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c0779c90-a2c8-4a92-848f-096a801f4a21 button');\n",
+              "        document.querySelector('#df-11b8a25f-7b10-49ce-aeff-fae2db91c4cf button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1137,7 +1163,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 61
         }
       ]
     },
@@ -1147,7 +1173,7 @@
       "metadata": {
         "id": "tKgnqlY9ubsS"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": []
     }
   ]
